# pdf-to-markdown

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALL.md  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-docx.txt  requirements-formats.txt  requirements-html.txt  requirements-legacy.txt  requirements-markitdown.txt  requirements-web.txt  requirements-xlsx.txt  requirements.txt  test_sample.html
examples/: advanced_usage.py
src/: __init__.py
src/api/: __init__.py  app.py
src/cli/: __init__.py  main.py
src/converters/: __init__.py  base.py  document_converter.py  docx_converter.py  html_converter.py  markitdown_converter.py  ocr_converter.py  pdf_converter.py  pymupdf_converter.py  xlsx_converter.py
src/core/: __init__.py  cache.py  config.py  file_detector.py  models.py  orchestrator.py  profiling.py
src/web/: __init__.py  streamlit_app.py
tests/: test_docx_converter.py  test_html_converter.py  test_markitdown_converter.py  test_xlsx_converter.py
